Can now add tasks and show task list

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,12 @@
   <body>
     <div ng-controller="Task.controller">
       <h1>Current Tasks</h1>
-      <input>
+      <form ng-submit="addTask(newTaskItem)">
+        <input ng-model="newTaskItem">
+        <button type="submit">add task</button>
+      </form>
         <ul>
-          <li ng-repeat="task in taskList"></li>
+          <li ng-repeat="task in tasks">{{task.task}}</li>
         </ul>
     </div>
     <div ui-view></div>
