--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="Blocitoff">
   <head>
     <title>Blocitoff</title>
+    <base href="/"></base>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/app.css">
@@ -12,7 +13,6 @@
     <script src="/app.js"></script>
   </head>
   <body>
-  <h1>Blocitoff</h1>     
     <div ui-view></div>
   </body>
 </html>
