Tasks can be marked as complete and can be seen in the completed view

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
   <body class="centered">
    <nav> 
       <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="">My Tasks</a></li>
-        <li role="presentation"><a href="#">Completed Tasks</a></li>
-        <li role="presentation"><a href="">Expired Tasks</a></li>
+        <li role="presentation"><a ui-sref='active'>My Tasks</a></li>
+        <li role="presentation"><a ui-sref='completed'>Completed Tasks</a></li>
+        <li role="presentation"><a ui-sref='expired'>Expired Tasks</a></li>
       </ul>
     </nav> 
     <div ui-view></div>
